crates/toml/tests/snapshots/invalid/table/overwrite-bool-with-array.stderr
TOML parse error at line 2, column 3
  |
2 | [[a]]
  |   ^
duplicate key
